Circle align fix, small improvements

--- a/css/styles.css
+++ b/css/styles.css
@@ -264,14 +264,14 @@ body {
   height: 60px;
 }
 
-.footer-icons-block > div > img {
+.footer-icons-block > div > a {
   width: 100%;
   height: 100%;
   filter: brightness(0);
   transition: 300ms ease-in-out;
 }
 
-.footer-icons-block > div > img:hover {
+.footer-icons-block > div > a:hover {
   cursor: pointer;
   filter: brightness(1);
 }
